[JSC] Assert length of LLInt opcodes using isCellWithType is 3 https://bugs.webkit.org/show_bug.cgi?id=162134

Reviewed by Saam Barati.

* llint/LLIntData.cpp:
(JSC::LLInt::Data::performAssertions):


Canonical link: https://commits.webkit.org/180245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206083 268f45cc-cd09-0410-ab3c-d52691b4dbfc